--- a/Attendance System/Attendance System.csproj
+++ b/Attendance System/Attendance System.csproj
@@ -61,6 +61,18 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>DataSet1.xsd</DependentUpon>
     </Compile>
+    <Compile Include="FrmAddClass.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmAddClass.Designer.cs">
+      <DependentUpon>FrmAddClass.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmAddStudents.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmAddStudents.Designer.cs">
+      <DependentUpon>FrmAddStudents.cs</DependentUpon>
+    </Compile>
     <Compile Include="mainFrm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -75,6 +87,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="FrmAddClass.resx">
+      <DependentUpon>FrmAddClass.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmAddStudents.resx">
+      <DependentUpon>FrmAddStudents.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="mainFrm.resx">
       <DependentUpon>mainFrm.cs</DependentUpon>
     </EmbeddedResource>
