--- a/Attendance System/Attendance System.csproj
+++ b/Attendance System/Attendance System.csproj
@@ -73,17 +73,17 @@
     <Compile Include="FrmAddStudents.Designer.cs">
       <DependentUpon>FrmAddStudents.cs</DependentUpon>
     </Compile>
-    <Compile Include="mainFrm.cs">
+    <Compile Include="FrmMain.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="mainFrm.Designer.cs">
-      <DependentUpon>mainFrm.cs</DependentUpon>
+    <Compile Include="FrmMain.Designer.cs">
+      <DependentUpon>FrmMain.cs</DependentUpon>
     </Compile>
-    <Compile Include="loginFrm.cs">
+    <Compile Include="FrmLogin.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="loginFrm.Designer.cs">
-      <DependentUpon>loginFrm.cs</DependentUpon>
+    <Compile Include="FrmLogin.Designer.cs">
+      <DependentUpon>FrmLogin.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -93,11 +93,11 @@
     <EmbeddedResource Include="FrmAddStudents.resx">
       <DependentUpon>FrmAddStudents.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="mainFrm.resx">
-      <DependentUpon>mainFrm.cs</DependentUpon>
+    <EmbeddedResource Include="FrmMain.resx">
+      <DependentUpon>FrmMain.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="loginFrm.resx">
-      <DependentUpon>loginFrm.cs</DependentUpon>
+    <EmbeddedResource Include="FrmLogin.resx">
+      <DependentUpon>FrmLogin.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
