--- a/Attendance System/Attendance System.csproj
+++ b/Attendance System/Attendance System.csproj
@@ -147,5 +147,6 @@
     <Content Include="MetroFramework.txt" />
     <None Include="Resources\key.gif" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
